--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <h1> SGPA CALCULATOR</h1>
-    <div>
+    <div >
         <div class="item">
             <div id="clear"><button class="clear">CLEAR</button></div>
             <div style="display: flex; justify-content: center;"><p>SGPA:</p><p id="para"></p></div>
         </div>
-        <button id="add">ADD COURSES HERE.</button><button id="submit">SUBMIT</button>
+        <button id="add">ADD COURSES</button><button id="submit">SUBMIT</button>
     </div>
     <script src="soundbox.js"></script>
 </body>
